# saayro

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
services/api/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260416_0001_backend_basics.py  20260416_0002_buddy_ai_fields.py  20260416_0003_auth_sessions.py  20260416_0004_google_connectors.py  20260417_0005_auth_foundation.py  20260418_0006_pretrip_buddy.py
services/api/postgres/: pg_hba.conf
services/api/scripts/: run-mypy.ps1
services/api/src/saayro_api/: main.py
services/api/src/saayro_api/ai/: __init__.py  classification.py  config.py  context.py  orchestrator.py  prompts.py  types.py
services/api/src/saayro_api/ai/providers/: __init__.py  _normalize.py  base.py  (+2 more)
services/api/src/saayro_api/api/: deps.py  router.py
services/api/src/saayro_api/core/: application.py  config.py  errors.py  middleware.py  request_context.py  secrets.py  security.py
services/api/src/saayro_api/db/: base.py  session.py
services/api/src/saayro_api/models/: __init__.py  auth.py  buddy.py  connections.py  exports.py  itinerary.py  trips.py  users.py
services/api/src/saayro_api/schemas/: auth.py  buddy.py  common.py  connections.py  dev.py  exports.py  itinerary.py  profile.py  trips.py
services/api/src/saayro_api/services/: auth.py  buddy.py  connections.py  exports.py  google_connectors.py  itinerary.py  profile.py  trips.py  users.py
services/api/tests/: conftest.py  test_api.py
(+193 files in other folders)
